--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,13 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+#file {
+  display: none;
+}
+
+#selectedFileName {
+  color: #666 !important;
 }
