--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,39 @@ code {
 h1 {
   font-size: 64px !important;
 }
+
+.center {
+  justify-content: center;
+}
+
+.center-block {
+  display: flex;
+  justify-content: center;
+}
+
+.text-concat {
+  position: relative;
+  display: inline-block;
+  word-wrap: break-word;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-height: 4.6em; /* (Number of lines you want visible) * (line-height) */
+  line-height: 1.2em;
+  text-align:justify;
+}
+
+.h-responsive {
+  display: block !important;
+  max-width: 100% !important;
+  min-height: 300px !important;
+}
+
+.byPuGQ {
+  border-radius: 1rem;
+  box-shadow: rgb(26 45 71 / 10%) 4px 4px 25px 0px;
+  background-color: rgb(255, 255, 255);
+  padding: 2rem;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out 0s;
+  border: 1px solid rgb(224, 224, 224);
+}
